--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.9.2",
+    "@reduxjs/toolkit": "^2.10.1",
     "@smastrom/react-rating": "^1.5.0",
-    "@tanstack/react-query": "^5.90.5",
-    "axios": "^1.13.1",
+    "@tanstack/react-query": "^5.90.7",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "dom": "^0.0.3",
+    "firebase": "^12.5.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.5",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
