--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,5 @@
     "jsx": "react-jsx",
     "noEmit": true
   },
-  "include": ["src"],
-  "exclude": ["**/*.d.ts"]
+  "include": ["src", "vite-env.d.ts"]
 }
