--- a/.github/ci-cd.yml
+++ b/.github/ci-cd.yml
@@ -49,3 +49,36 @@ jobs:
       # Step 5: Build React app
       - name: Build React app
         run: npm run build
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    # The steps section defines the sequence of actions that will be executed within the test job
+    steps:
+      # Step 1: Checkout the repository code: Uses the actions/checkout GitHub Action to fetch
+      # the repository's code. This makes the repository’s files available for the pipeline to work with
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Node.js: Configures the Node.js environment for the workflow & installs
+      # and uses Node.js version 18, which is compatible with many React application
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20" # Use a Node.js version compatible with your React app
+
+      # Step 3: Install dependencies: Installs the project dependencies specified in the
+      # package.json file using npm install
+      - name: Install dependencies
+        run: npm install
+
+      # Step 4: Deploy to Vercel (or another platform)
+      - name: Deploy to Vercel
+        run: |
+          npm install -g vercel
+          vercel--prod --yes --token ${{secrets.VERCEL_TOKEN}}
+
+      # Step 5:
+      - name:
+        run:
